fix hero text and spacing

--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -2,14 +2,18 @@
     width: 100%;
     display: flex;
     align-items: flex-start;
-    gap: 15px;
-    padding: 80px 40px 0 40px;
+    justify-content: space-between;
+    padding-top: 80px;
 }
 
 .heroLeft {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    > h1 {
+        line-height: 72px;
+        font-size: 48px;
+    }
 }
 
 .heroCoverImg {
